@@ -14,7 +14,7 @@ libntp_a_SOURCES = a_md5encrypt.c adjtime.c atoint.c atolfp.c atouint.c \
 	mfp_mul.c binio.c ieee754io.c gpstolfp.c recvbuff.c iosignal.c \
 	icom.c audio.c
 EXTRA_libntp_a_SOURCES = adjtimex.c log.c mktime.c random.c snprintf.c \
-	strerror.c
+	strdup.c strerror.c
 libntp_a_LIBADD = @LIBOBJS@
 libntp_a_DEPENDENCIES = @LIBOBJS@
 INCLUDES = -I$(top_srcdir)/include -I$(top_srcdir)/librsaref
